[package]
name = "touhou-formats"
version = "0.1.0"
authors = ["Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>"]
edition = "2018"
description = "Collection of parsers for Touhou formats"
homepage = "https://pytouhou.linkmauve.fr"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7", default-features = false, features = ["alloc"] }
encoding_rs = "0.8"
bitflags = "1"
touhou-utils = "*"
