[package]
name = "touhou-python"
version = "0.1.0"
edition = "2021"
authors = [
  "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "libtouhou"

[dependencies]
touhou-formats = "*"
pyo3 = { version = "0.17", features = ["extension-module"] }
image = { version = "0.24", default-features = false, features = ["png"], optional = true }

[features]
default = []
glide = ["image"]
